Fix T56705: Z axis do not displays in side views